--- a/staff/francesc-destruels/rest-api/package.json
+++ b/staff/francesc-destruels/rest-api/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "atob": "^2.1.2",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "isomorphic-fetch": "^2.2.1",
