--- a/staff/francesc-destruels/rest-api/package.json
+++ b/staff/francesc-destruels/rest-api/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "pug": "^2.0.3"
   },
   "devDependencies": {
